# docs/swagger.json
@@ -86,6 +86,48 @@
                 }
             }
         },
+        "/api/auth/register": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "authentications"
+                ],
+                "summary": "CreateUser",
+                "parameters": [
+                    {
+                        "description": "request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserCreateReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    }
+                }
+            }
+        },
         "/api/otps/request": {
             "post": {
                 "produces": [
@@ -284,46 +326,6 @@
                     }
                 }
             },
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "CreateUser",
-                "parameters": [
-                    {
-                        "description": "request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.UserCreateReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.HTTPResp"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/dto.HTTPResp"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/dto.HTTPResp"
-                        }
-                    }
-                }
-            },
             "delete": {
                 "produces": [
                     "application/json"
@@ -347,48 +349,6 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/dto.UserDeleteReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.HTTPResp"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/dto.HTTPResp"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/dto.HTTPResp"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/users/active": {
-            "put": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "ActiveUser",
-                "parameters": [
-                    {
-                        "description": "request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.UserActiveReq"
                         }
                     }
                 ],
@@ -704,7 +664,7 @@
         "dto.AccessToken": {
             "type": "object",
             "properties": {
-                "access_token": {
+                "accessToken": {
                     "type": "string"
                 }
             }
@@ -731,32 +691,18 @@
                 }
             }
         },
-        "dto.UserActiveReq": {
+        "dto.UserCheckPhoneNumberReq": {
             "type": "object",
-            "required": [
-                "email",
-                "otp"
-            ],
             "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "otp": {
+                "phoneNumber": {
                     "type": "string"
                 }
             }
         },
         "dto.UserCreateReq": {
             "type": "object",
-            "required": [
-                "avatar_url",
-                "name",
-                "password",
-                "phone",
-                "username"
-            ],
             "properties": {
-                "avatar_url": {
+                "avatarUrl": {
                     "type": "string"
                 },
                 "email": {
@@ -768,7 +714,7 @@
                 "password": {
                     "type": "string"
                 },
-                "phone": {
+                "phoneNumber": {
                     "type": "string"
                 },
                 "username": {
@@ -778,9 +724,6 @@
         },
         "dto.UserDeleteReq": {
             "type": "object",
-            "required": [
-                "id"
-            ],
             "properties": {
                 "id": {
                     "type": "string"
@@ -805,7 +748,7 @@
                 "name": {
                     "type": "string"
                 },
-                "phone": {
+                "phoneNumber": {
                     "type": "string"
                 },
                 "status": {
@@ -838,34 +781,22 @@
         },
         "dto.UserLoginReq": {
             "type": "object",
-            "required": [
-                "password",
-                "username_or_email"
-            ],
             "properties": {
                 "password": {
                     "type": "string"
                 },
-                "username_or_email": {
+                "phoneNumber": {
                     "type": "string"
                 }
             }
         },
         "dto.UserResetPasswordReq": {
             "type": "object",
-            "required": [
-                "email",
-                "new_password",
-                "otp"
-            ],
             "properties": {
-                "email": {
+                "newPassword": {
                     "type": "string"
                 },
-                "new_password": {
-                    "type": "string"
-                },
-                "otp": {
+                "phoneNumber": {
                     "type": "string"
                 }
             }
@@ -903,7 +834,7 @@
                 "name": {
                     "type": "string"
                 },
-                "phone": {
+                "phoneNumber": {
                     "type": "string"
                 },
                 "status": {
@@ -926,7 +857,7 @@
                 "name": {
                     "type": "string"
                 },
-                "phone": {
+                "phoneNumber": {
                     "type": "string"
                 }
             }
