# dto/token_dto.go
@@ -1,5 +1,5 @@
 package dto
 
 type AccessToken struct {
-	AccessToken string `json:"access_token"`
+	AccessToken string `json:"accessToken"`
 }
